Added application secret.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,6 @@
-play.filters.hosts {
-  allowed = ["."]
+play {
+  http.secret.key="xltYE<6d^]s<YkVi^LWjCOyqIh`Pt]M=MGbHzx074[Ok/MLaDZxz;0zDQ7;g<OPt"
+  filters.hosts {
+    allowed = ["."]
+  }
 }
