Attempted to enable actor logging.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,3 +5,7 @@ play {
   }
   modules.enabled += "modules.ActorsModule"
 }
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+}
